# bt-exc-main

./: .env.example  .gitignore  README.md  SUBMISSION.md  docker-compose.yml
.claude/: settings.local.json
app/: Dockerfile  config.py  main.py  models.py  pyproject.toml  schemas.py  worker.py
app/routes/: __init__.py  health.py  jobs.py
app/services/: audio_converter.py  file_validator.py  health_checker.py  job_processor.py  media_processor.py  metadata_extractor.py  transcript_extractor.py
app/services/jobs/: job_executor.py  job_repository.py
app/tests/: conftest.py  test_pipeline.py
app/utils/: exceptions.py  transcript_extractor.py
ui/: package.json  vite.config.ts
ui/src/: App.css  App.tsx
ui/src/components/: HealthStatus.tsx  JobCard.tsx  JobList.tsx  JobStatus.tsx  ResultCard.tsx  Uploader.tsx
ui/src/services/: api.ts
ui/src/types/: index.ts
