[tool.poetry]
name = "media-pipeline"
version = "0.1.0"
description = "Media processing pipeline"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.34" }
celery = "^5.4"
mongoengine = "^0.29"
pydantic-settings = "^2.7"
python-multipart = "^0.0.20"
requests = "^2.32"
huggingface-hub = "^1.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
httpx = "^0.28"
mongomock = "^4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
